--- a/playbook/roles/addons/metrics-server.yaml
+++ b/playbook/roles/addons/metrics-server.yaml
@@ -1,4 +1,10 @@
 ---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: metrics-server
+  namespace: kube-system
+---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
@@ -9,9 +15,17 @@ metadata:
     rbac.authorization.k8s.io/aggregate-to-admin: "true"
 rules:
 - apiGroups: ["metrics.k8s.io"]
-  resources: ["pods", "nodes"]
-  verbs: ["get", "list", "watch"]
-
+  resources: ["pods","nodes"]
+  verbs: ["get","list","watch"]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: system:metrics-server
+rules:
+- apiGroups: [""]
+  resources: ["pods","nodes","nodes/stats","namespaces","configmaps"]
+  verbs: ["get","list","watch"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
@@ -25,7 +39,6 @@ subjects:
 - kind: ServiceAccount
   name: metrics-server
   namespace: kube-system
-
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
@@ -40,25 +53,6 @@ subjects:
 - kind: ServiceAccount
   name: metrics-server
   namespace: kube-system
-
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
-metadata:
-  name: system:metrics-server
-rules:
-- apiGroups:
-  - ""
-  resources:
-  - pods
-  - nodes
-  - nodes/stats
-  - namespaces
-  verbs:
-  - get
-  - list
-  - watch
-
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
@@ -72,9 +66,8 @@ subjects:
 - kind: ServiceAccount
   name: metrics-server
   namespace: kube-system
-  
 ---
-apiVersion: apiregistration.k8s.io/v1
+apiVersion: apiregistration.k8s.io/v1beta1
 kind: APIService
 metadata:
   name: v1beta1.metrics.k8s.io
@@ -82,19 +75,26 @@ spec:
   service:
     name: metrics-server
     namespace: kube-system
-    port: 443
   group: metrics.k8s.io
   version: v1beta1
   insecureSkipTLSVerify: true
   groupPriorityMinimum: 100
   versionPriority: 100
-
 ---
 apiVersion: v1
-kind: ServiceAccount
+kind: Service
 metadata:
   name: metrics-server
   namespace: kube-system
+  labels:
+    kubernetes.io/name: "Metrics-server"
+    kubernetes.io/cluster-service: "true"
+spec:
+  selector:
+    k8s-app: metrics-server
+  ports:
+  - port: 443
+    targetPort: 4443
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -113,24 +113,17 @@ spec:
       labels:
         k8s-app: metrics-server
     spec:
-      serviceAccountName: metrics-server
-      volumes:
-      # mount in tmp so we can safely use from-scratch images and/or read-only containers
-      - name: tmp-dir
-        emptyDir: {}
       hostNetwork: true
+      serviceAccountName: metrics-server
       containers:
       - name: metrics-server
-        image: eipwork/metrics-server:v0.3.7
-        command:
-          - /metrics-server
-          - --kubelet-insecure-tls
-          - --kubelet-preferred-address-types=InternalIP 
+        image: registry.aliyuncs.com/google_containers/metrics-server-amd64:v0.3.6
+        imagePullPolicy: IfNotPresent
         args:
           - --cert-dir=/tmp
           - --secure-port=4443
-          - --kubelet-insecure-tls=true
-          - --kubelet-preferred-address-types=InternalIP,Hostname,InternalDNS,externalDNS
+          - --kubelet-insecure-tls
+          - --kubelet-preferred-address-types=InternalDNS,InternalIP,ExternalDNS,ExternalIP,Hostname
         ports:
         - name: main-port
           containerPort: 4443
@@ -139,26 +132,26 @@ spec:
           readOnlyRootFilesystem: true
           runAsNonRoot: true
           runAsUser: 1000
-        imagePullPolicy: Always
+        resources:
+          limits:
+            memory: 1Gi
+            cpu: 1000m
+          requests:
+            memory: 1Gi
+            cpu: 1000m
         volumeMounts:
         - name: tmp-dir
           mountPath: /tmp
+        - name: localtime
+          readOnly: true
+          mountPath: /etc/localtime
+      volumes:
+      - name: tmp-dir
+        emptyDir: {}
+      - name: localtime
+        hostPath:
+          type: File
+          path: /etc/localtime
       nodeSelector:
-        beta.kubernetes.io/os: linux
-
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: metrics-server
-  namespace: kube-system
-  labels:
-    kubernetes.io/name: "Metrics-server"
-    kubernetes.io/cluster-service: "true"
-spec:
-  selector:
-    k8s-app: metrics-server
-  ports:
-  - port: 443
-    protocol: TCP
-    targetPort: 4443
+        kubernetes.io/os: linux
+        kubernetes.io/arch: "amd64"
