--- a/playbook/roles/cfssl/tasks/main.yaml
+++ b/playbook/roles/cfssl/tasks/main.yaml
@@ -14,6 +14,7 @@
     - apiserver-ca-config.json.j2
     - apiserver-ca-csr.json.j2
     - apiserver-csr.json.j2
+    - metrics-proxy-csr.json.j2
 
 - name: Generate the kube-apiserver certificate
   shell: cd roles/cfssl/files && /bin/bash generate_apiserver_cert.sh
